go/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vnc

---

apiVersion: v1
kind: Namespace
metadata:
  name: vnc-proxy

---

apiVersion: v1
kind: Namespace
metadata:
  name: vnc-gateway
