go/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vnc-network-policy
  namespace: vnc
spec:
  podSelector:
    matchLabels:
      app: vnc
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vnc-gateway
      podSelector:
        matchLabels:
          app: vnc-gateway
    ports:
    - protocol: TCP
      port: 3128

  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
